<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first_window"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DiskriminantasDuomenys">

    <FrameLayout
        android:id="@+id/fragment_container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/iveskite_a_b_c"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:paddingRight="20dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondaryLightColor"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/a"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/aId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberSigned|numberDecimal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColorLink="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondaryLightColor"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/bId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberSigned|numberDecimal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondaryLightColor"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/c"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/cId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberSigned|numberDecimal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/button_skaiciuoti"
        android:textSize="24sp" />

</LinearLayout>